# BrownQuantumHackathon

./: README.md  pyproject.toml
DeveshAtharvAustine/: main.py
DeveshAtharvAustine/qpong/utils/: level.py
DeveshAtharvAustine/qpong/viz/: statevector_grid.py
DeveshAustineAtharv/DeveshAtharvAustine/qpong/containers/: vbox.py
DeveshAustineAtharv/DeveshAtharvAustine/qpong/controls/: circuit_grid.py
Hobos/: main.py
Hobos/qpong/model/: circuit_grid_model.py
Hobos/qpong/utils/: input.py  level.py  scene.py
Hobos/qpong/viz/: statevector_grid.py
PlumberAgentPictorial7/: QTetris_final.py
QCVenv/: pyvenv.cfg
QPong/qpong/utils/: parameters.py
TypeRaQuarium/: QeometryDash.ipynb
qpong/controls/: circuit_grid.py
qpong/model/: circuit_grid_model.py
qpong/utils/: input.py  scene.py
qpong/viz/: statevector_grid.py
